fixed the broken UI for now

--- a/assets/css/galxy.css
+++ b/assets/css/galxy.css
@@ -1,7 +1,7 @@
 /* Please ❤ this if you like it! */
 
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i'); */
 
 :root {
     --secondary: #1C315E;
@@ -33,7 +33,7 @@ a:hover {
 /* #Cursor
 ================================================== */
 
-.cursor,
+/* .cursor,
 .cursor2,
 .cursor3 {
     position: fixed;
@@ -42,7 +42,7 @@ a:hover {
     pointer-events: none;
     left: -100px;
     top: 50%;
-    mix-blend-mode: difference;
+    mix-blend-mode: exclusion;
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear;
 }
@@ -90,7 +90,7 @@ a:hover {
     .cursor3 {
         display: none
     }
-}
+} */
 
 /* #Primary style
 ================================================== */
@@ -505,12 +505,12 @@ body.nav-active .nav__list-item:nth-child(10) {
     opacity: 0;
 }
 
-#switch,
+/* #switch,
 #circle {
     cursor: pointer;
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear;
-}
+} */
 
 #switch {
     width: 60px;
