--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap'); */
 
+/* roboto  */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* Unbounded  */
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400&display=swap');
+
+/* Montserrat */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* Rubik */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --secondary: #1C315E;
@@ -13,15 +24,15 @@
   padding: 0;
   border: 0;
   outline: 0;
-  cursor: none;
+  /* cursor: none; */
   box-sizing: border-box;
   vertical-align: baseline;
   list-style-type: none;
   scroll-behavior: smooth;
   transition: 300ms;
   text-decoration: none;
-  font-family: poppins, linotte, poppins;
-  cursor: url(/assets/circel.svg);
+  font-family: Rubik, Montserrat, Unbounded, roboto, poppins, linotte;
+  /* cursor: url(/assets/circel.svg); */
 }
 
 
@@ -73,6 +84,22 @@ ins {
   text-decoration: none;
 }
 
+input,
+textarea {
+  padding: 15px 30px;
+  border-radius: 12px;
+  border: 0px !important;
+  resize: none;
+
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--accent-light);
+  opacity: 1;
+
+}
+
 .button {
   padding: 20px 40px;
   width: fit-content;
@@ -108,7 +135,7 @@ ins {
 }
 
 .container {
-  padding: 10px 10vw;
+  padding: 30px 10vw;
 }
 
 del {
@@ -135,7 +162,7 @@ hr {
   padding: 0;
 }
 
-input,
+
 textarea,
 select {
   padding: 10px 10px;
@@ -240,11 +267,31 @@ nav>div.logo {
 }
 
 .shadow {
-  box-shadow: 1px 1px 18px 6px #ffa32a23;
+  box-shadow: 1px 1px 18px 6px #ffa32a23 !important;
 }
 
 .smallfont {
   font-size: 12px;
+}
+
+.exp .year {
+  font-size: 12px;
+
+}
+
+.exp .year i {
+  font-size: 12px;
+  margin-right: 8px;
+}
+
+.exp .role {
+  color: var(--secondary);
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.exp .work-role {
+  color: var(--accent-dark);
 }
 
 .justify {
@@ -394,9 +441,7 @@ ul.categ li.active {
 }
 
 
-#contact {
-  background: linear-gradient(to top, rgba(255, 255, 255, 0.92), rgb(255, 255, 255)), url(./../..//src/img/bg.jpg)repeat center center/cover;
-}
+
 
 .justfull {
   width: 92%;
@@ -415,6 +460,23 @@ ul.categ li.active {
 }
 
 #experience>div.df {
+  padding: 30px 40px;
+}
+
+.proj li::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  /* background: linear-gradient(0deg, var(--primary) 10%, transparent); */
+}
+
+#experience h1 {
+  margin-bottom: 20px;
+  margin-top: 70px;
+}
+
+#experience .mark .vw-s.bd5 {
   padding: 30px 40px;
 }
 
@@ -545,6 +607,7 @@ ul.categ li.active {
 
 .aboutMe {
   margin: 3rem 0rem;
+  width: fit-content;
 }
 
 
@@ -696,4 +759,8 @@ ul.categ li.active {
 
 .detail-view:hover {
   box-shadow: 2px 2px 2px var(--accent-light);
+}
+
+#contact .df h2 {
+  font-size: 32px;
 }
